<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutImage"
    android:elevation="36dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_card_white">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="24dp"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true">

    <TextView
        android:id="@+id/tvLabelImagePreview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        style="@style/TextLabel"
        android:text="@string/image_preview"/>

    <ImageView
        android:id="@+id/imageViewPreviewUploadedImage"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_undraw_photograph_re_up3b"
        android:contentDescription="@string/preview_of_uploaded_image" />

    <Button
        android:id="@+id/buttonGetResult"
        android:background="@drawable/bg_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginVertical="16dp"
        android:text="@string/get_result"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginVertical="36dp"/>

    <TextView
        android:id="@+id/tvLabelImageResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        style="@style/TextLabel"
        android:text="@string/image_result"/>

    <ImageView
        android:id="@+id/imageViewResult"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_undraw_analyze_17kw"
        android:contentDescription="@string/result_image" />

    <Button
        android:id="@+id/buttonDownloadResult"
        android:background="@drawable/bg_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="42dp"
        android:text="@string/download_result"/>
</LinearLayout>

</RelativeLayout>